--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/nap/Library/Android/sdk
-flutter.sdk=/Users/nap/flutter/flutter
+sdk.dir=C:/Users/Administrator/AppData/Local/Android/Sdk
+flutter.sdk=F:\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
