--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   shared_preferences: ^0.5.2
   event_bus: ^1.1.0
   image_picker: ^0.5.0+9
+  permission_handler: '^3.2.0'
+  url_launcher: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +47,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - assets/images/update/ic_up_bg.png
+    - assets/images/update/ic_update_bg.png
+    - assets/images/update/ic_up_close.png
     #menu
     - assets/images/menu_project_select.png
     - assets/images/menu_project_unselect.png
